Added 2 js packages and scri.js

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Hammadi's Portfolio</title>
+    <title>Karim Hammadi's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="scri.js">
 </head>
 <body>
     <main>
@@ -22,5 +23,7 @@
   </svg>
 </div>
     </main>
+    <script src="https://unpkg.com/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.13.0/dist/gsap.min.js"></script>
 </body>
 </html>
