--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karim Hammadi's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="script" href="scri.js">
 </head>
 <body>
     <main>
@@ -23,6 +22,7 @@
   </svg>
 </div>
     </main>
+    <script src="scri.js"></script>
     <script src="https://unpkg.com/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
     <script src="https://unpkg.com/gsap@3.13.0/dist/gsap.min.js"></script>
 </body>
