--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <section>
             <div class="container">
+              <h1>Test</h1>
   <svg id="svg-stage" xmlns="http://www.w3.org/2000/svg" viewBox="-4 -4 110 110" fill="none">
     <defs>
       <linearGradient id="grad-1" x1="-4" y1="-4" x2="9" y2="9" gradientUnits="userSpaceOnUse">
