--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <stop offset="0.5" stop-color="rgb(247, 189, 248)" />
       </linearGradient>
     </defs>
-    <path fill-opacity="0" stroke="rgb(250,225,225)" d="M50.5 50.5h50v50s-19.2 1.3-37.2-16.7S56 35.4 35.5 15.5C18.5-1 .5.5.5.5v50h50s25.6-.6 38-18 12-32 12-32h-50v100H.5S.2 80.7 11.8 68.2 40 49.7 50.5 50.5Z" />
+    <path stroke="none" d="M50.5 50.5h50v50s-19.2 1.3-37.2-16.7S56 35.4 35.5 15.5C18.5-1 .5.5.5.5v50h50s25.6-.6 38-18 12-32 12-32h-50v100H.5S.2 80.7 11.8 68.2 40 49.7 50.5 50.5Z" />
     <rect fill="url(#grad-1)" width="8" height="8" x="-4" y="-4" rx="2" />
   </svg>
 </div>
