--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <section>
+          <!--
             <div class="container">
   <svg id="svg-stage" xmlns="http://www.w3.org/2000/svg" viewBox="-4 -4 110 110" fill="none">
     <defs>
@@ -20,7 +21,9 @@
     <path stroke="none" d="M50.5 50.5h50v50s-19.2 1.3-37.2-16.7S56 35.4 35.5 15.5C18.5-1 .5.5.5.5v50h50s25.6-.6 38-18 12-32 12-32h-50v100H.5S.2 80.7 11.8 68.2 40 49.7 50.5 50.5Z" />
     <rect fill="url(#grad-1)" width="8" height="8" x="-4" y="-4" rx="2" />
   </svg>
-</div>
+</div>-->
+          <h1><a href="kim.html">To Kim</a></h1>
+        </section>
     </main>
     <script src="https://unpkg.com/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
