--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <rect fill="url(#grad-1)" width="8" height="8" x="-4" y="-4" rx="2" />
   </svg>
 </div>-->
-          <h1><a href="Kim"></a></h1>
+          <h1><a href="Kim">To Kim</a></h1>
         </section>
     </main>
     <script src="https://unpkg.com/gsap@3.13.0/dist/gsap.min.js"></script>
