--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Karim Hammadi's Portfolio</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body> </body>
+  <body>
+    <section>
+      <div> 
+        <h1>I LOVE YOU</h1>
+      </div>
+    </section>
+    <section>
+      <div> </div>
+    </section>
+    <section>
+      <div> </div>
+    </section>
+  </body>
 </html>
