added text to the three divs

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
       </div>
     </section>
     <section>
-      <div> </div>
+      <div> 
+        <h1>SO</h1>
+      </div>
     </section>
     <section>
-      <div> </div>
+      <div> 
+        <h1>FUCKING MUCH</h1>
+      </div>
     </section>
   </body>
 </html>
