--- a/index.html
+++ b/index.html
@@ -7,20 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section>
-      <div> 
-        <h1>I LOVE YOU</h1>
-      </div>
-    </section>
-    <section>
-      <div> 
-        <h1>SO</h1>
-      </div>
-    </section>
-    <section>
-      <div> 
-        <h1>FUCKING MUCH</h1>
-      </div>
-    </section>
+    <div class="section">section 1</div>
+    <div class="section">section 2</div>
+    <div class="section">section 3</div>
   </body>
 </html>
