--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="section">section 1</div>
-    
+    <div class="section">section 2</div>
+    <div class="section">section 3</div>
   </body>
 </html>
