--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         padding: 0;
         height: 100%;
         scroll-behavior: smooth;
+        overflow-x: hidden; /* 👈 Prevent sideways scroll */
       }
       
       body {
@@ -24,6 +25,7 @@
         justify-content: center;
         font-size: 2rem;
         scroll-snap-align: start;
+        box-sizing: border-box; /* 👈 Helps prevent overflow from padding/borders */
       }
       
       .section:nth-child(1) { background: lightcoral; }
