--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       
       body {
-        scroll-snap-type: y mandatory;
+        scroll-snap-type: proximity
         overflow-y: scroll;
       }
       
