removed line breaks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         const countdownEl = document.getElementById('countdown');
       
         if (diff <= 0) {
-          countdownEl.innerHTML = "🎆 Happy 4th of July!";
+          countdownEl.innerHTML = "🎆 I love you!";
           clearInterval(timer);
           return;
         }
