short commit to modify the i love you message

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         const countdownEl = document.getElementById('countdown');
       
         if (diff <= 0) {
-          countdownEl.innerHTML = "🎆 I love you!";
+          countdownEl.innerHTML = "I love you!";
           clearInterval(timer);
           return;
         }
