--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <audio controls>
       <source src="tess.m4a" type="audio/mpeg">
     </audio>
+    <audio controls>
+      <source src="tess.m4a" type="audio/mpeg">
+    </audio>
   </body>
 </html>
