--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Kim's storytime </title>
+    <title>Kim's stooorytime <3</title>
   </head>
   <body>
     <audio controls>
