clean dark mode and centered att

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Kim's storytime <3</title>
   </head>
   <body>
-    <div> 
-      <h1>I love you so much</h1>
+    <div id="audio-container"> 
+      <h1>I love you so much Kim you're the best girl ever</h1>
       <audio controls>
         <source src="tesst.mp3" type="audio/mpeg">Your browser does not support the audio element.
       </audio>
-      <h2>Enjoy this my love</h2>
+      <h2>I wish you a good night my cutie pie</h2>
     </div>
   </body>
 </html>
