--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="audio-container"> 
       <h1>I love you so much Kim you're the best girl ever</h1>
-      <p>The story of the tired moon</p>
+      <h3>The story of the tired moon</h3>
       <audio controls>
         <source src="TheStoryofthetiredmoon.mp3" type="audio/mpeg">Your browser does not support the audio element.
       </audio>
