--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>I love you so so much cutie I hope you slept well and that you don't feel too sick</h1>
       <h3>When Sunny went away</h3>
       <audio controls>
-        <source src="WhenSunnyWentAway.mp3.mp3" type="audio/mpeg">Your browser does not support the audio element.
+        <source src="WhenSunnyWentAway.mp3" type="audio/mpeg">Your browser does not support the audio element.
       </audio>
       <h2>See you tomorrow gorgeous I love you</h2>
     </div>
