--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>I love you so much Kim you're the best girl ever</h1>
         <h3>The story of the tired moon</h3>
         <audio controls>
-          <source src="AUDIOTheStoryofthetiredmoon.mp3" type="audio/mpeg">Your browser does not support the audio element.
+          <source src="AUDIO/TheStoryofthetiredmoon.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>I wish you a good night my cutie pie</h2>
       </div>
@@ -31,7 +31,7 @@
         <audio controls>
           <source src="TheStoryofthetiredmoon.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
-        <h2>I hope you'll enjoy this one as much as I love you</h2>
+        <h2>I hope you'll enjoy this one as much as I love</h2>
       </div>
     </div>
   </body>
