3rd one added fr

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>I love you so so much cutie I hope you slept well and that you don't feel too sick</h1>
         <h3>When Sunny went away</h3>
         <audio controls>
-          <source src="AUDIOWhenSunnyWentAway.mp3" type="audio/mpeg">Your browser does not support the audio element.
+          <source src="AUDIO/WhenSunnyWentAway.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>See you tomorrow gorgeous I love you</h2>
       </div>
@@ -29,7 +29,7 @@
         <h1>I hope tomorrow you will wake up healthy, you're the best person to ever exist for me</h1>
         <h3>Richard the Meerkat and the Little Gecko</h3>
         <audio controls>
-          <source src="TheStoryofthetiredmoon.mp3" type="audio/mpeg">Your browser does not support the audio element.
+          <source src="AUDIO/Richardthemeerkatandthelittlegecko.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>I hope you'll enjoy this one as much as I love</h2>
       </div>
