--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <div id="audio-container"> 
-        <h1>Oh no, the Leaves are Gone</h1>
+        <h1>The rainbowfish + Oh no, the Leaves are Gone</h1>
         <audio controls>
           <source src="AUDIO/fallleave.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
