--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>I miss you so much</h1>
         <h3>The bird girl</h3>
         <audio controls>
-          <source src="AAUDIO/junglebird.mp3" type="audio/mpeg">Your browser does not support the audio element.
+          <source src="AUDIO/junglebird.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>Didn't see you in school today that's why I believe tomorrow is school</h2>
       </div>
