--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <body>
     <div id="ma">
       <div id="audio-container"> 
+        <h1>Search and Rescue Officer for the US Forest Service</h1>
+        <audio controls>
+          <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div id="audio-container"> 
         <h1>Something went wrong with my heart transplant</h1>
         <audio controls>
           <source src="AUDIO/hearttransplant.mp3" type="audio/mpeg">Your browser does not support the audio element.
