--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="ma">
+    <div id="maindi">
       <div id="audio-container"> 
         <h1>Search and Rescue Officer for the US Forest Service</h1>
         <audio controls>
