--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <div id="grid-container">
       <div id="audio-container"> 
         <h1>Search and Rescue Officer for the US Forest Service</h1>
-        <audio controls>
-          <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
-        </audio>
+        <div id="audio">
+          <audio controls>
+            <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
+          </audio>
+        </div>
       </div>
       <div id="audio-container"> 
         <h1>Something went wrong with my heart transplant</h1>
