--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="grid-container">
-      <div id="audio-container"> 
-        <h1>Search and Rescue Officer for the US Forest Service</h1>
-        <audio controls>
+    <div class="card-container">
+      <div class="card">
+        <h3>Search and Rescue Officer for the US Forest Service</h3>
+        <button>audio(controls)
           <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
-        </audio>
+        </button>
       </div>
-      <div id="audio-container"> 
-        <h1>Something went wrong with my heart transplant</h1>
+      <div class="card">
+        <h3>Something went wrong with my heart transplant</h3>
         <audio controls>
           <source src="AUDIO/hearttransplant.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
       </div>
-      <div id="audio-container"> 
-        <h1>The rainbowfish + Oh no, the Leaves are Gone</h1>
+      <div class="card">
+        <h3>The rainbowfish + Oh no, the Leaves are Gone</h3>
         <audio controls>
           <source src="AUDIO/fallleave.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
       </div>
-      <div id="audio-container"> 
-        <h1>I miss you so much</h1>
+      <div class="card"> 
+        <h3>I miss you so much</h3>
         <h3>The bird girl</h3>
         <audio controls>
           <source src="AUDIO/junglebird.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>Didn't see you in school today that's why I believe tomorrow is school</h2>
       </div>
-      <div id="audio-container"> 
-        <h1>I love you so so much cutie I hope you slept well and that you don't feel too sick</h1>
+      <div class="card"> 
+        <h3>I love you so so much cutie I hope you slept well and that you don't feel too sick</h3>
         <h3>When Sunny went away</h3>
         <audio controls>
           <source src="AUDIO/WhenSunnyWentAway.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>See you tomorrow gorgeous I love you</h2>
       </div>
-      <div id="audio-container"> 
-        <h1>I hope tomorrow you will wake up healthy, you're the best person to ever exist for me</h1>
+      <div class="card"> 
+        <h3>I hope tomorrow you will wake up healthy, you're the best person to ever exist for me</h3>
         <h3>Richard the Meerkat and the Little Gecko</h3>
         <audio controls>
           <source src="AUDIO/Richardthemeerkatandthelittlegecko.mp3" type="audio/mpeg">Your browser does not support the audio element.
         </audio>
         <h2>I hope you'll enjoy this one as much as I love</h2>
       </div>
-      <div id="audio-container"> 
-        <h1>I love you we can do it Kim</h1>
+      <div class="card"> 
+        <h3>I love you we can do it Kim</h3>
         <h3>Princess Jessie and the Unicorn</h3>
         <audio controls>
           <source src="AUDIO/PrincessJessieandtheUnicorn.mp3" type="audio/mpeg">Your browser does not support the audio element.
