--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="card-container">
       <div class="card">
         <h3>Search and Rescue Officer for the US Forest Service</h3>
-        <button>audio(controls)
+        <audio controls>
           <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
-        </button>
+        </audio>
       </div>
       <div class="card">
         <h3>Something went wrong with my heart transplant</h3>
