--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <body>
     <div class="card-container">
       <div class="card">
+        <h3>Emergency alert Part1</h3>
+        <audio controls>
+          <source src="AUDIO/emergencyalert.mp3" type="audio/mpeg">Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="card">
         <h3>Search and Rescue Officer for the US Forest Service</h3>
         <audio controls>
           <source src="AUDIO/SAROfficer.mp3" type="audio/mpeg">Your browser does not support the audio element.
